--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
     <link
       rel="icon"
-      href="img/netflix.png"
+      href="img/nficon.ico"
     />
   </head>
   <body>
@@ -78,7 +78,7 @@
               <label class="email__label">Email Address</label>
             </div>
             <button class="primary__button">
-              Get Started <i class="fal fa-chevron-right"></i>
+              <a href="moviezone.html">Get Started <i class="fal fa-chevron-right"></i></a>
             </button>
           </div>
         </div>
