--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <label class="email__label">Email Address</label>
             </div>
             <button class="primary__button">
-              <a href="moviezone.html">Get Started <i class="fal fa-chevron-right"></i></a>
+              <a class="get" href="moviezone.html">Get Started <i class="fal fa-chevron-right"></i></a>
             </button>
           </div>
         </div>
